<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    tools:context=".AddPlayers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="@string/addPlayer_request"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/dark_blue"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/light_blue"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/addPlayer_imgFrog"
            android:src="@drawable/frog"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/player1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/light_blue"
            android:hint="@string/addPlayer_hint1"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#004D40"
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/light_blue"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/rabbit"
            android:adjustViewBounds="true"
            android:contentDescription="@string/addPlayer_imgRabbit" />

        <EditText
            android:id="@+id/player2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@color/light_blue"
            android:hint="@string/addPlayer_hint2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#004D40"
            android:importantForAutofill="no" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_round_ends"
        android:text="@string/addPlayer_btn"
        android:textColor="#212121" />
</LinearLayout>